--- a/app/src/main/res/navigation/navigation_fragment.xml
+++ b/app/src/main/res/navigation/navigation_fragment.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.dicoding.recraftify.ui.fragment.HomeFragment"
+        android:name="com.dicoding.recraftify.ui.fragment.home.HomeFragment"
         android:label="@string/home"
         tools:layout="@layout/fragment_home" />
 
