--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,30 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragment.home.HomeFragment">
 
-
         <com.google.android.material.search.SearchBar
             android:id="@+id/sb_home"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/searchbar"
-            tools:layout_editor_absoluteY="6dp"/>
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="6dp" />
             <androidx.appcompat.widget.SearchView
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:hint="@string/searchbar"
-                app:layout_anchor="@id/sb_home"/>
+                app:layout_anchor="@id/sb_home"
+                tools:ignore="MissingConstraints" />
 
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_resep"
+        android:layout_width="411dp"
+        android:layout_height="643dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sb_home"
+        tools:ignore="MissingConstraints"
+        tools:listitem="@layout/item_recipe" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="16dp"
-        android:text="@string/hello_blank_fragment"
-        android:layout_marginTop="65dp"/>
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
