--- a/app/src/main/res/drawable/button1.xml
+++ b/app/src/main/res/drawable/button1.xml
@@ -4,8 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke
-        android:color="@color/md_theme_light_primary"
-        android:width="2dp"/>
+        android:color="@color/white"
+        android:width="3dp"/>
     <solid
         android:color="@android:color/transparent"/>
     <corners
