--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="150dp"
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
     android:layout_marginTop="16dp"
@@ -20,30 +20,28 @@
         android:background="@color/md_theme_light_primary">
 
         <TextView
-            android:id="@+id/judul_resep"
-            android:layout_width="190dp"
+            android:id="@+id/waste_type"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="27dp"
-            android:layout_marginEnd="20dp"
-            android:text="@string/judul_resep"
+            android:text="@string/waste_type"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/iv_recipe"
-            app:layout_constraintStart_toStartOf="@id/cl_rv"
-            app:layout_constraintTop_toTopOf="@id/cl_rv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_waste"
             tools:ignore="NotSibling" />
 
         <ImageView
-            android:id="@+id/iv_recipe"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_marginEnd="20dp"
+            android:id="@+id/iv_waste"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:scaleType="centerCrop"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/cl_rv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/waste_type"
             tools:ignore="MissingConstraints"
             tools:src="@tools:sample/avatars" />
 
