--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -63,7 +63,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_name"
-        app:startIconDrawable="@drawable/person">
+        app:startIconDrawable="@drawable/profile">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_name"
