--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,65 +2,65 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="seed">#7a9878</color>
-    <color name="md_theme_light_primary">#1F6C2F</color>
+    <color name="seed">#338756</color>
+    <color name="md_theme_light_primary">#006D3D</color>
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
-    <color name="md_theme_light_primaryContainer">#A6F5A8</color>
-    <color name="md_theme_light_onPrimaryContainer">#002107</color>
-    <color name="md_theme_light_secondary">#526350</color>
+    <color name="md_theme_light_primaryContainer">#97F7B7</color>
+    <color name="md_theme_light_onPrimaryContainer">#00210F</color>
+    <color name="md_theme_light_secondary">#4F6353</color>
     <color name="md_theme_light_onSecondary">#FFFFFF</color>
-    <color name="md_theme_light_secondaryContainer">#D4E8D0</color>
-    <color name="md_theme_light_onSecondaryContainer">#101F10</color>
-    <color name="md_theme_light_tertiary">#39656C</color>
+    <color name="md_theme_light_secondaryContainer">#D2E8D4</color>
+    <color name="md_theme_light_onSecondaryContainer">#0D1F13</color>
+    <color name="md_theme_light_tertiary">#3A6470</color>
     <color name="md_theme_light_onTertiary">#FFFFFF</color>
-    <color name="md_theme_light_tertiaryContainer">#BCEBF2</color>
-    <color name="md_theme_light_onTertiaryContainer">#001F23</color>
+    <color name="md_theme_light_tertiaryContainer">#BEEAF7</color>
+    <color name="md_theme_light_onTertiaryContainer">#001F26</color>
     <color name="md_theme_light_error">#BA1A1A</color>
     <color name="md_theme_light_errorContainer">#FFDAD6</color>
     <color name="md_theme_light_onError">#FFFFFF</color>
     <color name="md_theme_light_onErrorContainer">#410002</color>
-    <color name="md_theme_light_background">#FCFDF7</color>
-    <color name="md_theme_light_onBackground">#1A1C19</color>
-    <color name="md_theme_light_surface">#FCFDF7</color>
-    <color name="md_theme_light_onSurface">#1A1C19</color>
-    <color name="md_theme_light_surfaceVariant">#DEE5D9</color>
-    <color name="md_theme_light_onSurfaceVariant">#424940</color>
-    <color name="md_theme_light_outline">#72796F</color>
-    <color name="md_theme_light_inverseOnSurface">#F0F1EB</color>
-    <color name="md_theme_light_inverseSurface">#2F312D</color>
-    <color name="md_theme_light_inversePrimary">#8BD88E</color>
+    <color name="md_theme_light_background">#FBFDF8</color>
+    <color name="md_theme_light_onBackground">#191C19</color>
+    <color name="md_theme_light_surface">#FBFDF8</color>
+    <color name="md_theme_light_onSurface">#191C19</color>
+    <color name="md_theme_light_surfaceVariant">#DCE5DB</color>
+    <color name="md_theme_light_onSurfaceVariant">#414942</color>
+    <color name="md_theme_light_outline">#717971</color>
+    <color name="md_theme_light_inverseOnSurface">#F0F1EC</color>
+    <color name="md_theme_light_inverseSurface">#2E312E</color>
+    <color name="md_theme_light_inversePrimary">#7BDA9C</color>
     <color name="md_theme_light_shadow">#000000</color>
-    <color name="md_theme_light_surfaceTint">#1F6C2F</color>
-    <color name="md_theme_light_outlineVariant">#C2C9BD</color>
+    <color name="md_theme_light_surfaceTint">#006D3D</color>
+    <color name="md_theme_light_outlineVariant">#C0C9BF</color>
     <color name="md_theme_light_scrim">#000000</color>
-    <color name="md_theme_dark_primary">#8BD88E</color>
-    <color name="md_theme_dark_onPrimary">#003910</color>
-    <color name="md_theme_dark_primaryContainer">#00531B</color>
-    <color name="md_theme_dark_onPrimaryContainer">#A6F5A8</color>
-    <color name="md_theme_dark_secondary">#B9CCB5</color>
-    <color name="md_theme_dark_onSecondary">#243424</color>
-    <color name="md_theme_dark_secondaryContainer">#3A4B39</color>
-    <color name="md_theme_dark_onSecondaryContainer">#D4E8D0</color>
-    <color name="md_theme_dark_tertiary">#A1CED6</color>
-    <color name="md_theme_dark_onTertiary">#00363C</color>
-    <color name="md_theme_dark_tertiaryContainer">#1F4D53</color>
-    <color name="md_theme_dark_onTertiaryContainer">#BCEBF2</color>
+    <color name="md_theme_dark_primary">#7BDA9C</color>
+    <color name="md_theme_dark_onPrimary">#00391D</color>
+    <color name="md_theme_dark_primaryContainer">#00522C</color>
+    <color name="md_theme_dark_onPrimaryContainer">#97F7B7</color>
+    <color name="md_theme_dark_secondary">#B6CCB9</color>
+    <color name="md_theme_dark_onSecondary">#223527</color>
+    <color name="md_theme_dark_secondaryContainer">#384B3D</color>
+    <color name="md_theme_dark_onSecondaryContainer">#D2E8D4</color>
+    <color name="md_theme_dark_tertiary">#A3CDDA</color>
+    <color name="md_theme_dark_onTertiary">#023640</color>
+    <color name="md_theme_dark_tertiaryContainer">#214C57</color>
+    <color name="md_theme_dark_onTertiaryContainer">#BEEAF7</color>
     <color name="md_theme_dark_error">#FFB4AB</color>
     <color name="md_theme_dark_errorContainer">#93000A</color>
     <color name="md_theme_dark_onError">#690005</color>
     <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
-    <color name="md_theme_dark_background">#1A1C19</color>
-    <color name="md_theme_dark_onBackground">#E2E3DD</color>
-    <color name="md_theme_dark_surface">#1A1C19</color>
-    <color name="md_theme_dark_onSurface">#E2E3DD</color>
-    <color name="md_theme_dark_surfaceVariant">#424940</color>
-    <color name="md_theme_dark_onSurfaceVariant">#C2C9BD</color>
-    <color name="md_theme_dark_outline">#8C9389</color>
-    <color name="md_theme_dark_inverseOnSurface">#1A1C19</color>
-    <color name="md_theme_dark_inverseSurface">#E2E3DD</color>
-    <color name="md_theme_dark_inversePrimary">#1F6C2F</color>
+    <color name="md_theme_dark_background">#191C19</color>
+    <color name="md_theme_dark_onBackground">#E1E3DE</color>
+    <color name="md_theme_dark_surface">#191C19</color>
+    <color name="md_theme_dark_onSurface">#E1E3DE</color>
+    <color name="md_theme_dark_surfaceVariant">#414942</color>
+    <color name="md_theme_dark_onSurfaceVariant">#C0C9BF</color>
+    <color name="md_theme_dark_outline">#8B938A</color>
+    <color name="md_theme_dark_inverseOnSurface">#191C19</color>
+    <color name="md_theme_dark_inverseSurface">#E1E3DE</color>
+    <color name="md_theme_dark_inversePrimary">#006D3D</color>
     <color name="md_theme_dark_shadow">#000000</color>
-    <color name="md_theme_dark_surfaceTint">#8BD88E</color>
-    <color name="md_theme_dark_outlineVariant">#424940</color>
+    <color name="md_theme_dark_surfaceTint">#7BDA9C</color>
+    <color name="md_theme_dark_outlineVariant">#414942</color>
     <color name="md_theme_dark_scrim">#000000</color>
 </resources>
